// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DockHost, given rendered given implementations of dock tabs emerge renders 1`] = `
<body>
  <div>
    <div
      class="Dock isOpen"
    >
      <div
        class="flex align-center tabs-container"
      >
        <div
          class="Tab flex gaps align-center"
        >
          <div
            class="label"
          >
            <div
              class="flex align-center"
            >
              <div
                data-some-dock-tab-test="true"
              >
                Some content
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex align-center toolbar gaps box grow pl-0"
      >
        <div
          class="dock-menu box grow"
        />
      </div>
      <div
        class="tab-content"
        style="flex-basis: 420px;"
      >
        Some content
      </div>
    </div>
  </div>
</body>
`;

exports[`DockHost, given rendered given no implementations of dock tabs, renders 1`] = `
<body>
  <div>
    <div
      class="Dock isOpen"
    >
      <div
        class="flex align-center tabs-container"
      />
      <div
        class="flex align-center toolbar gaps box grow pl-0"
      >
        <div
          class="dock-menu box grow"
        />
      </div>
      <div
        class="tab-content"
        style="flex-basis: 420px;"
      >
        Some content
      </div>
    </div>
  </div>
</body>
`;
